--- a/frontend/src/styles/chessboard.css
+++ b/frontend/src/styles/chessboard.css
@@ -14,7 +14,7 @@ button {
 }
 
 .board {
-    width: 65vh;
+    width: 80%;
     max-width: 1000px;
     height: 100%;
 }
@@ -29,7 +29,7 @@ button {
 }
 
 .about-game p {
-    display: inline-flex;
+    margin-bottom: 3px;
 }
 
 @media (max-width: 1000px) {
