--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -1,116 +1,168 @@
 * {
-    padding: 0;
-    margin: 0;
+	padding: 0;
+	margin: 0;
 }
 
 body {
-    background-color: rgb(20, 20, 20);
-    color: rgb(205, 205, 205);
-    padding: 0;
-    font-family: Arial, sans-serif;
+	background-color: rgb(20, 20, 20);
+	color: rgb(205, 205, 205);
+	padding: 0;
+	font-family: Arial, sans-serif;
 }
 
 a {
-    text-decoration: none;
-    color: #fff;
+	text-decoration: none;
+	color: #fff;
 }
 
 header {
-    background-color: #333;
-    color: #fff;
+	background-color: #333;
+	color: #fff;
 }
 
 header a {
-    transition: 0.5s;
+	transition: 0.5s;
 }
 
 header a:hover {
-    color: rgb(0, 145, 255);
+	color: rgb(0, 145, 255);
 }
 
 header .container {
-    padding: 20px;
+	padding: 20px;
 }
 
 .container {
-    max-width: 1500px;
-    width: 95%;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
+	max-width: 1500px;
+	width: 95%;
+	margin: 0 auto;
+	display: flex;
+	align-items: center;
 }
 
 .logo img {
-    max-height: 40px;
-    margin-right: 50px;
+	max-height: 40px;
+	margin-right: 50px;
 }
 
 nav {
-    width: 100%;
-    display: inline-flex;
+	width: 100%;
+	display: inline-flex;
 }
 
 nav ul {
-    list-style: none;
-    padding: 0;
-    display: flex;
+	list-style: none;
+	padding: 0;
+	display: flex;
 }
 
 nav li {
-    margin-right: 20px;
+	margin-right: 20px;
 }
 
 nav a {
-    text-decoration: none;
-    color: #fff;
+	text-decoration: none;
+	color: #fff;
 }
 
 nav .left {
-    width: 89%;
+	width: 89%;
 }
 
 nav .right {
-    width: 10%;
+	width: 10%;
 }
 
 nav .right a {
-    color: rgb(0, 145, 255);
+	color: rgb(0, 145, 255);
 }
 
 nav .right a:hover {
-    color: #fff;
+	color: #fff;
+}
+
+button {
+	cursor: pointer;
+}
+
+.preloader-wrapper {
+	position: fixed;
+    width: 100vw;
+    height: 100vh;
+	align-items: center;
+	justify-content: center;
+	height: 100vh;
+	background-color: rgba(20, 20, 20, 1);
+
+}
+
+.preloader-hide {
+	animation: hide-preloader 0.7s linear;
+    opacity: 0;
+}
+
+.spinner {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+	border: 5px solid rgba(0, 0, 0, 0.1);
+	border-top: 5px solid rgb(0, 145, 255);
+	border-radius: 50%;
+	width: 50px;
+	height: 50px;
+	animation: spin 1s linear infinite;
+}
+
+@keyframes hide-preloader {
+	0% {
+		opacity: 100%;
+	}
+	100% {
+		opacity: 100%;
+		background-color: rgba(0, 0, 0, 0);
+	}
+}
+
+@keyframes spin {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
 }
 
 @media screen and (max-width: 767px) {
-    .container {
-        flex-direction: column;
-        align-items: center;
-    }
+	.container {
+		flex-direction: column;
+		align-items: center;
+	}
 
-    .logo {
-        margin-bottom: 10px;
-    }
+	.logo {
+		margin-bottom: 10px;
+	}
 
-    nav {
-        text-align: center;
-    }
+	nav {
+		text-align: center;
+	}
 
-    nav ul {
-        flex-direction: column;
-    }
+	nav ul {
+		flex-direction: column;
+	}
 
-    nav li {
-        margin: 0;
-        padding: 10px 0;
-    }
+	nav li {
+		margin: 0;
+		padding: 10px 0;
+	}
 }
 
 @media screen and (max-width: 479px) {
-    .container {
-        padding: 20px;
-    }
+	.container {
+		padding: 20px;
+	}
 
-    .logo img {
-        max-height: 30px;
-    }
+	.logo img {
+		max-height: 30px;
+	}
 }
