--- a/frontend/src/styles/lessons.css
+++ b/frontend/src/styles/lessons.css
@@ -36,6 +36,21 @@
     margin-right: 15px;
     margin-bottom: 30px;
     background-color: rgb(0, 140, 255);
+    transition: all 0.3s ease-in-out;
+}
+
+.card:hover {
+    background-color: rgb(224, 224, 224);
+    box-shadow: 0 0 20px rgba(255, 68, 0, 0.6);
+    transform: scale(1.02);
+    color: #313131;
+}
+
+.card:hover  .header{
+    background-color: rgb(224, 224, 224);
+    box-shadow: 0 0 20px rgba(255, 68, 0, 0.6);
+    transform: scale(1.02);
+    color: #313131;
 }
 
 .card img {
@@ -47,6 +62,7 @@
     display: block;
     margin: 0;
     padding: 10px;
+    transition: all 0.3s ease-in-out;
 }
 
 .card .without_image {
