--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -16,7 +16,7 @@ a {
 }
 
 header {
-	background-color: #333;
+	background-color: #2b3034;
 	color: #fff;
 }
 
@@ -28,9 +28,6 @@ header a:hover {
 	color: rgb(0, 145, 255);
 }
 
-header .container {
-	padding: 20px;
-}
 
 .container {
 	max-width: 1500px;
@@ -41,11 +38,13 @@ header .container {
 }
 
 .logo img {
-	max-height: 40px;
+	margin-top: 5px;
+	max-height: 60px;
 	margin-right: 50px;
 }
 
 nav {
+	padding: 20px;
 	width: 100%;
 	display: inline-flex;
 }
