--- a/frontend/src/styles/board.css
+++ b/frontend/src/styles/board.css
@@ -3,6 +3,48 @@ main {
     overflow: auto;
 }
 
+.game {
+    height: 90%;
+}
+
+.game-buttons {
+    height: 10%;
+}
+
+.game-buttons button {
+    height: 50px;
+    padding: 1px 5px;
+    border: 3px solid #5b5854;
+    background-color: #353535;
+    font-size: 15pt;
+    font-style: normal;
+    font-weight: bold;
+    color: white;
+    margin: 2px;
+    transition: all ease-in-out 0.5s;
+}
+
+.game-buttons button:hover {
+    background-color: #7b7b7b;
+}
+
+.description {
+    padding: 0;
+}
+
+textarea {
+    width: 95%; 
+    height: auto;
+    background: none;
+    border: none;
+    color: white; 
+    font-size: 15px;
+    padding: 10px;
+    resize: vertical; 
+    overflow-y: auto;
+    overflow-x: hidden;
+  }
+
 .board-name {
     width: 100%;
     margin: 0 auto;
@@ -33,80 +75,6 @@ main {
 
 .board-name ::placeholder {
     color: rgb(195, 195, 195);
-}
-
-.chess-board {
-    height: 70vh;
-    max-height: 1200px;
-    max-width: 100%;
-    aspect-ratio: 1;
-    display: flex;
-    justify-content: right;
-    margin-right: 3%;
-    grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: repeat(8, 1fr);
-}
-
-.active-move {
-    width: 0.5%;
-    min-width: 2px;
-    max-width: 10px;
-    box-sizing: inherit;
-    position: relative;
-}
-
-.active-move::before {
-    content: " ";
-    display: block;
-}
-
-#active-marker {
-    width: 100%;
-    height: 20%;
-    position: absolute;
-    background-color: rgb(164, 16, 16);
-    right: 0;
-}
-
-#active-marker::before {
-    content: " ";
-    display: block;
-}
-
-.history {
-    width: 100%;
-    height: 100%;
-    min-width: 300px;
-    max-width: 300px;
-    height: 100%;
-    box-sizing: inherit;
-    overflow: hidden;
-    background-color: #262421;
-    overflow-y: scroll;
-}
-
-.history table {
-    width: 100%;
-}
-
-.history move {
-    width: 39%;
-    padding: 1.5%;
-    padding-left: 3%;
-    height: 100%;
-    display: inline-block;
-}
-
-.history index {
-    width: 8%;
-    height: 100%;
-    padding: 1.5%;
-    border-right: 5px solid #5b5854;
-    display: inline-block;
-}
-
-.move-history {
-    width: 50%;
 }
 
 .options {
