--- a/frontend/src/styles/board.css
+++ b/frontend/src/styles/board.css
@@ -222,3 +222,54 @@ tfoot {
         grid-template-columns: repeat(1, minmax(100px, 1fr));
     }
 }
+
+.status {
+    position: fixed;
+    top: 10%;
+    left: 50%;
+    right: 50%;
+
+    width: 450px;
+    height: 100px;
+    display: none;
+
+    transform: translate(-50%);
+    z-index: 10;
+
+}
+
+.status_error {
+    display: block;
+    
+    background-color: #a60101;
+    border: 4px solid #db0000;
+}
+
+.status_succesfull {
+    display: block;
+    
+    background-color: #30a601;
+    border: 4px solid #37db00;
+}
+
+.status__output {
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+}
+
+.status_close-button {
+    position: absolute;
+    top: 0;
+    right: 0;
+
+    width: 40px;
+    height: 40px;
+    border: none;
+    background: none;
+}
+
+.status_close-button img {
+    width: 100%;
+    height: 100%;
+}
