--- a/frontend/src/styles/board.css
+++ b/frontend/src/styles/board.css
@@ -250,11 +250,13 @@ tfoot {
 
 .status {
     position: fixed;
-    top: 10%;
+    top: 20%;
     left: 50%;
     right: 50%;
 
-    width: 450px;
+    box-sizing: border-box;
+
+    width: 400px;
     height: 100px;
     display: none;
 
@@ -278,7 +280,7 @@ tfoot {
 }
 
 .status__output {
-    width: 100%;
+    width: 90%;
     height: 100%;
     padding: 10px;
 }
@@ -297,4 +299,10 @@ tfoot {
 .status_close-button img {
     width: 100%;
     height: 100%;
+}
+
+@media (max-width: 500px) {
+    .status {
+        width: 370px;
+    }
 }
