--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -10,6 +10,11 @@ body {
 	font-family: Arial, sans-serif;
 }
 
+.wrapper {
+	max-width: 100%;
+	overflow: hidden;
+}
+
 button, input[type="submit"] {
 	cursor: pointer;
 }
@@ -20,8 +25,12 @@ a {
 }
 
 header {
+	width: 100%;
+	max-height: 100px;
+
 	background-color: #2b3034;
 	color: #fff;
+	display: inline-flex;
 }
 
 header a {
@@ -32,25 +41,71 @@ header a:hover {
 	color: rgb(0, 145, 255);
 }
 
-
 .container {
 	max-width: 1500px;
 	width: 95%;
 	margin: 0 auto;
 	display: flex;
+	justify-content: space-between;
 	align-items: center;
 }
 
-.logo img {
+.logo-and-button {
+	width: 300px;
+	height: 100%;
+	display: flex;
+}
+
+.logo {
+	height: 80%;
 	margin-top: 5px;
-	max-height: 60px;
 	margin-right: 50px;
 }
 
+.logo img {
+	height: 100%;
+}
+
+.open-close-bar {
+	transform: translateY(50%);
+
+	width: 50px;
+	height: 50px;
+	border: none;
+	background: none;
+	display: none;
+}
+
+.open-close-bar img {
+	width: 50px;
+	height: 50px;
+}
+
+.close-bar {
+	position: absolute;
+	right: 0;
+	top: 0;
+
+	display: none;
+
+	width: 50px;
+	height: 50px;
+
+	border: none;
+	background: none;
+}
+
+.close-bar img {
+	width: 100%;
+}
+
 nav {
+	position: relative;
 	padding: 20px;
 	width: 100%;
 	display: inline-flex;
+	transition-duration: 1s;
+
 }
 
 nav ul {
@@ -68,19 +123,16 @@ nav a {
 	color: #fff;
 }
 
-nav .left {
-	width: 89%;
+nav ul{
+	width: 100%;
 }
 
-nav .right {
-	width: 10%;
-}
-
-nav .right a {
+.sign-in-out {
 	color: rgb(0, 145, 255);
+	text-align: right;
 }
 
-nav .right a:hover {
+.sign-in-out:hover {
 	color: #fff;
 }
 
@@ -136,10 +188,10 @@ button {
 	}
 }
 
-@media screen and (max-width: 767px) {
-	.container {
-		flex-direction: column;
-		align-items: center;
+@media screen and (max-width: 910px) {
+
+	.open-close-bar, .open-close-bar, .close-bar {
+		display: block;
 	}
 
 	.logo {
@@ -147,7 +199,20 @@ button {
 	}
 
 	nav {
-		text-align: center;
+		position: fixed;
+		top: 0;
+		left: 0;
+		transform: translateX(-100%);
+
+
+		width: 80%;
+		
+		font-size: 30px;
+
+		color: white;
+		background-color: rgb(20, 20, 20);
+		
+		text-align: left;
 	}
 
 	nav ul {
@@ -157,15 +222,5 @@ button {
 	nav li {
 		margin: 0;
 		padding: 10px 0;
-	}
-}
-
-@media screen and (max-width: 479px) {
-	.container {
-		padding: 20px;
-	}
-
-	.logo img {
-		max-height: 30px;
 	}
 }
