--- a/frontend/src/styles/forum-create-discussion.css
+++ b/frontend/src/styles/forum-create-discussion.css
@@ -1,6 +1,5 @@
 main .container {
     display: block;
-    background-color: rgb(45, 45, 45);
 }
 
 .header {
@@ -9,10 +8,11 @@ main .container {
     margin-top: 60px;
     margin-bottom: 10px;
     padding: 2%;
-    display: flex;
+    display: inline-flex;
     flex-flow: row wrap;
     align-items: center;
     justify-content: start;
+    background-color: rgb(45, 45, 45);
 }
 
 .header button {
@@ -22,18 +22,19 @@ main .container {
 }
 
 .back {
-    width: 5%;
+    width: 50px;
+    max-width: 50px;
+    height: 50px;
 }
 
 .back img {
-    width: 70%;
+    width: 100%;
 }
 
 .header h1 {
     width: 90%;
+    white-space: pre-wrap;
 }
-
-
 
 textarea {
     width: 80%;
@@ -57,23 +58,20 @@ form {
 
 label {
     display: block;
-    /* margin-bottom: 8px; */
     font-size: 14px;
 }
 
 input[type="text"],
 textarea {
-    width: 50%;
+    width: 90%;
     padding: 15px;
     box-sizing: border-box;
     background-color: #555;
     border: 1px solid #777;
     color: #fff;
     border-radius: 5px;
-    width: 90%;
     margin-bottom: 15px;
     margin-top: 10px;
-    
 }
 
 input[type="text"]:focus,
@@ -127,4 +125,20 @@ input[type="submit"]:hover {
 .status-error {
     border: 4px solid rgb(219, 0, 0);
     background-color: rgb(166, 1, 1);
+}
+
+@media (max-width: 700px) {
+    .header {
+          flex: 50px 99%; /* каждый элемент занимает 100% ширины */
+    }
+}
+@media (max-width:750px) {
+    input[type="text"],
+    textarea {
+        width: 100%;
+    }
+    input[type="submit"] {
+        width: 100%;
+    }
+    
 }
