--- a/frontend/src/styles/forum-page.css
+++ b/frontend/src/styles/forum-page.css
@@ -8,7 +8,7 @@ main .container {
     margin-top: 60px;
     margin-bottom: 10px;
     padding: 2%;
-    display: flex;
+    display: inline-flex;
     flex-flow: row wrap;
     align-items: center;
     justify-content: start;
@@ -22,11 +22,13 @@ main .container {
 }
 
 .back {
-    width: 5%;
+    width: 50px;
+    max-width: 50px;
+    height: 50px;
 }
 
 .back img {
-    width: 70%;
+    width: 100%;
 }
 
 .header h1 {
@@ -176,4 +178,10 @@ input[type="submit"]:hover {
 .show-more:hover {
     background-color: #fff;
     color: #333;
+}
+
+@media (max-width: 700px) {
+    .header {
+          flex: 50px 99%; /* каждый элемент занимает 100% ширины */
+    }
 }
