--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -26,7 +26,7 @@ a {
 
 header {
 	width: 100%;
-	max-height: 100px;
+	max-height: 70px;
 
 	background-color: #2b3034;
 	color: #fff;
@@ -67,8 +67,6 @@ header a:hover {
 }
 
 .open-close-bar {
-	transform: translateY(50%);
-
 	width: 50px;
 	height: 50px;
 	border: none;
@@ -203,15 +201,15 @@ button {
 		top: 0;
 		left: 0;
 		transform: translateX(-100%);
-
+		z-index: 1000;
 
 		width: 80%;
-		
-		font-size: 30px;
+		height: 100%;
+
+				font-size: 30px;
 
 		color: white;
-		background-color: rgb(20, 20, 20);
-		
+		background-color: rgba(20, 20, 20, 0.9);
 		text-align: left;
 	}
 
